--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -248,6 +248,13 @@
     margin-bottom: 5px;
     padding-top: 3px;
     padding-bottom: 3px;
+
+    label {
+
+        span {
+            color: #fff;
+        }
+    }
 }
 
 .ui-sortable-placeholder {
