Added a "start with Add button" option that shows "+ Add" instead of default fieldset.

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -36,7 +36,7 @@
         cursor: pointer;
 
         label  {
-            span { 
+            span {
                 text-decoration: underline;
             }
             &:hover {
@@ -294,6 +294,14 @@
             color: #b94a48;
             font-weight: bold;
         }
+    }
+}
+
+.archetypeEditor .archetypeAddButton:hover {
+    text-decoration: none;
+
+    .archetypeAddButtonText {
+        text-decoration: underline;
     }
 }
 
