--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -1,13 +1,5 @@
 <div class="archetypeEditor ng-class:model.config.customCssClass" ng-controller="Imulus.ArchetypeController">
     <textarea class="archetypeDeveloperModel" ng-show="model.config.developerMode" ng-model="model.value"></textarea>
-    <div class="archetypeFieldsetToolbar" ng-show="model.config.fieldsets.length > 1 && model.config.hideFieldsetToolbar != '1'">
-        <ul>
-            <li ng-repeat="fieldsetModel in model.config.fieldsets" ng-click="addRow(fieldsetModel.alias)">
-                <i class="fieldsetIcon icon ng-class:fieldsetModel.icon"></i>
-                <span>{{fieldsetModel.label}}</span>
-            </li>
-        </ul>
-    </div>
     <ul ui-sortable="sortableOptions" ng-model="model.value.fieldsets" ng-show="!showAddButton()">
         <li ng-repeat="fieldset in model.value.fieldsets">
             <fieldset ng-class="{archetypeFieldsetError: !fieldset.isValid}" ng-init="fieldsetConfigModel = getConfigFieldsetByAlias(fieldset.alias)">
@@ -23,7 +15,7 @@
                     <div class="archetypeEditorControls label-sub" ng-hide="model.config.hideFieldsetControls">
                         <i class="icon icon-add dropdown-toggle" ng-show="canAdd()" data-toggle="{{ model.config.fieldsets.length > 1 ? 'dropdown' : ''}}" ng-click="model.config.fieldsets.length == 1 ? addRow(fieldset.alias, $index) : return"></i>
                         <ul class="dropdown-menu umb-actions">
-                            <li ng-repeat="fieldsetModel in model.config.fieldsets" ng-click="addRow(fieldsetModel.alias, $index)">
+                            <li ng-repeat="fieldsetModel in model.config.fieldsets" ng-click="addRow(fieldsetModel.alias, $parent.$index)">
                                 <a>
                                     <i class="fieldsetIcon icon ng-class:fieldsetModel.icon"></i>
                                     <span class="menu-label">{{fieldsetModel.label}}</span>
