--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -46,7 +46,7 @@
         </li>
     </ul>
     <div ng-show="showAddButton()">
-        <a data-toggle="{{ model.config.fieldsets.length > 1 ? 'dropdown' : ''}}" ng-click="model.config.fieldsets.length == 1 ? addRow(fieldset.alias, 0) : return" prevent-default>
+        <a data-toggle="{{ model.config.fieldsets.length > 1 ? 'dropdown' : ''}}" ng-click="model.config.fieldsets.length == 1 ? addRow(model.config.fieldsets[0].alias, 0) : return" prevent-default>
             <i class="icon icon-add dropdown-toggle"></i>
             <localize key="general_add" class="archetypeAddButtonText">Add</localize>
         </a>
