--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -27,7 +27,7 @@
                         <i class="icon icon-navigation handle" ng-show="canSort()"></i>
                     </div>
                 </div>
-                <div class="archetypeCollapser animate-hide" ng-hide="isCollapsed(fieldset)">
+                <div class="archetypeCollapser animate-hide" ng-hide="model.config.enableCollapsing && isCollapsed(fieldset)">
                     <form class="form-inline">
                         <div ng-class="[property.alias, (getPropertyValidity($parent.$index, property.alias) === false ? 'archetypePropertyError' : '')]" class="archetypeProperty control-group" ng-repeat="property in fieldsetConfigModel.properties">
                             <label ng-hide="model.config.hidePropertyLabels == '1'" class="control-label" for="archetype-property-{{model.alias}}-{{$parent.$index}}-{{$index}}">
